test/testdata/classes/class/too_many_args_error.lox
class Foo {}

Foo(1, 2, 3); // error: Foo() accepts 0 arguments but 3 were given
